--- a/ExchangeRates/Base.lproj/Main.storyboard
+++ b/ExchangeRates/Base.lproj/Main.storyboard
@@ -21,26 +21,42 @@
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VUb-Gc-RqZ">
                                 <rect key="frame" x="10" y="54" width="394" height="216"/>
                             </pickerView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IA0-3h-PiF">
-                                <rect key="frame" x="10" y="290" width="394" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="TuZ-5J-Z0y">
+                                <rect key="frame" x="10" y="280" width="394" height="30"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VLc-1F-v1f">
+                                        <rect key="frame" x="0.0" y="0.0" width="124.5" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TO" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rgf-RZ-5yv">
+                                        <rect key="frame" x="134.5" y="5" width="125" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UyM-Rl-ypW">
+                                        <rect key="frame" x="269.5" y="0.0" width="124.5" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VUb-Gc-RqZ" secondAttribute="trailing" constant="10" id="7ca-Nz-EWV"/>
-                            <constraint firstItem="IA0-3h-PiF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="7s7-eG-YPV"/>
                             <constraint firstItem="VUb-Gc-RqZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="NMs-6P-9ak"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="IA0-3h-PiF" secondAttribute="trailing" constant="10" id="SiP-fD-Rkr"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TuZ-5J-Z0y" secondAttribute="trailing" constant="10" id="Rg4-0s-q7Y"/>
                             <constraint firstItem="VUb-Gc-RqZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="aeW-3e-8xa"/>
-                            <constraint firstItem="IA0-3h-PiF" firstAttribute="top" secondItem="VUb-Gc-RqZ" secondAttribute="bottom" constant="20" id="wpS-GO-cSp"/>
+                            <constraint firstItem="TuZ-5J-Z0y" firstAttribute="top" secondItem="VUb-Gc-RqZ" secondAttribute="bottom" constant="10" id="nwK-kv-Cha"/>
+                            <constraint firstItem="TuZ-5J-Z0y" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="tfL-VX-9IE"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="baseLabel" destination="IA0-3h-PiF" id="mV0-1v-gqP"/>
                         <outlet property="basePickerView" destination="VUb-Gc-RqZ" id="6lG-ai-B2l"/>
                     </connections>
                 </viewController>
