--- a/ExchangeRates/Base.lproj/Main.storyboard
+++ b/ExchangeRates/Base.lproj/Main.storyboard
@@ -21,23 +21,24 @@
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VUb-Gc-RqZ">
                                 <rect key="frame" x="10" y="54" width="394" height="216"/>
                             </pickerView>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="TuZ-5J-Z0y">
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="sRG-MU-D6x">
                                 <rect key="frame" x="10" y="280" width="394" height="30"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VLc-1F-v1f">
-                                        <rect key="frame" x="0.0" y="0.0" width="124.5" height="30"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YBG-Ge-Df2">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TO" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rgf-RZ-5yv">
-                                        <rect key="frame" x="134.5" y="5" width="125" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UyM-Rl-ypW">
-                                        <rect key="frame" x="269.5" y="0.0" width="124.5" height="30"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JhM-3l-aiS">
+                                        <rect key="frame" x="133" y="0.0" width="128" height="30"/>
+                                        <state key="normal" title="Button"/>
+                                        <connections>
+                                            <action selector="convertValue:" destination="BYZ-38-t0r" eventType="touchUpInside" id="al0-4U-2bx"/>
+                                        </connections>
+                                    </button>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fTD-7f-Pep">
+                                        <rect key="frame" x="266" y="0.0" width="128" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -47,17 +48,19 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sRG-MU-D6x" secondAttribute="trailing" constant="10" id="4jh-Ph-qee"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VUb-Gc-RqZ" secondAttribute="trailing" constant="10" id="7ca-Nz-EWV"/>
+                            <constraint firstItem="sRG-MU-D6x" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="J0j-tp-5Lt"/>
                             <constraint firstItem="VUb-Gc-RqZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="NMs-6P-9ak"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TuZ-5J-Z0y" secondAttribute="trailing" constant="10" id="Rg4-0s-q7Y"/>
                             <constraint firstItem="VUb-Gc-RqZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="aeW-3e-8xa"/>
-                            <constraint firstItem="TuZ-5J-Z0y" firstAttribute="top" secondItem="VUb-Gc-RqZ" secondAttribute="bottom" constant="10" id="nwK-kv-Cha"/>
-                            <constraint firstItem="TuZ-5J-Z0y" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="tfL-VX-9IE"/>
+                            <constraint firstItem="sRG-MU-D6x" firstAttribute="top" secondItem="VUb-Gc-RqZ" secondAttribute="bottom" constant="10" id="c7a-3V-omB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="basePickerView" destination="VUb-Gc-RqZ" id="6lG-ai-B2l"/>
+                        <outlet property="baseValue" destination="YBG-Ge-Df2" id="2mg-os-iRU"/>
+                        <outlet property="convertedValue" destination="fTD-7f-Pep" id="r5H-0J-YVS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
