--- a/ExchangeRates/Base.lproj/Main.storyboard
+++ b/ExchangeRates/Base.lproj/Main.storyboard
@@ -58,10 +58,10 @@
             </objects>
             <point key="canvasLocation" x="-786" y="109"/>
         </scene>
-        <!--View Controller-->
+        <!--Exchange Rate View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ExchangeRates" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ExchangeRateViewController" customModule="ExchangeRates" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
