--- a/ExchangeRates/Base.lproj/Main.storyboard
+++ b/ExchangeRates/Base.lproj/Main.storyboard
@@ -67,11 +67,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VUb-Gc-RqZ">
-                                <rect key="frame" x="10" y="54" width="394" height="216"/>
-                            </pickerView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="sRG-MU-D6x">
-                                <rect key="frame" x="10" y="280" width="394" height="30"/>
+                                <rect key="frame" x="10" y="382" width="394" height="30"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YBG-Ge-Df2">
                                         <rect key="frame" x="0.0" y="0.0" width="128" height="30"/>
@@ -95,28 +92,41 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DIa-NQ-0zG">
-                                <rect key="frame" x="10" y="330" width="58" height="42"/>
+                                <rect key="frame" x="20" y="64" width="58" height="42"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="Done"/>
                                 <connections>
                                     <action selector="dismissView:" destination="BYZ-38-t0r" eventType="touchUpInside" id="d8G-Vm-3ot"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Base Currency" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MPT-1f-nQy">
+                                <rect key="frame" x="10" y="116" width="394" height="30"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VUb-Gc-RqZ">
+                                <rect key="frame" x="10" y="156" width="394" height="216"/>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sRG-MU-D6x" secondAttribute="trailing" constant="10" id="4jh-Ph-qee"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VUb-Gc-RqZ" secondAttribute="trailing" constant="10" id="7ca-Nz-EWV"/>
+                            <constraint firstItem="VUb-Gc-RqZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="6KP-6I-WrJ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="MPT-1f-nQy" secondAttribute="trailing" constant="10" id="6r2-lf-XFI"/>
+                            <constraint firstItem="MPT-1f-nQy" firstAttribute="top" secondItem="DIa-NQ-0zG" secondAttribute="bottom" constant="10" id="7NS-99-zvB"/>
+                            <constraint firstItem="VUb-Gc-RqZ" firstAttribute="top" secondItem="MPT-1f-nQy" secondAttribute="bottom" constant="10" id="EA9-Bc-5ea"/>
                             <constraint firstItem="sRG-MU-D6x" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="J0j-tp-5Lt"/>
-                            <constraint firstItem="VUb-Gc-RqZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="NMs-6P-9ak"/>
-                            <constraint firstItem="DIa-NQ-0zG" firstAttribute="top" secondItem="sRG-MU-D6x" secondAttribute="bottom" constant="20" id="NNj-vT-b1D"/>
-                            <constraint firstItem="VUb-Gc-RqZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="aeW-3e-8xa"/>
-                            <constraint firstItem="sRG-MU-D6x" firstAttribute="top" secondItem="VUb-Gc-RqZ" secondAttribute="bottom" constant="10" id="c7a-3V-omB"/>
-                            <constraint firstItem="DIa-NQ-0zG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="mQE-Ed-m52"/>
+                            <constraint firstItem="DIa-NQ-0zG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Mp5-gC-8ET"/>
+                            <constraint firstItem="DIa-NQ-0zG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="P1q-dO-B1T"/>
+                            <constraint firstItem="sRG-MU-D6x" firstAttribute="top" secondItem="VUb-Gc-RqZ" secondAttribute="bottom" constant="10" id="PgR-hl-Jhq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VUb-Gc-RqZ" secondAttribute="trailing" constant="10" id="T68-fX-kni"/>
+                            <constraint firstItem="MPT-1f-nQy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="dMa-xu-nVZ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="baseCurrencyLabel" destination="MPT-1f-nQy" id="KX3-Et-Rty"/>
                         <outlet property="basePickerView" destination="VUb-Gc-RqZ" id="6lG-ai-B2l"/>
                         <outlet property="baseValue" destination="YBG-Ge-Df2" id="2mg-os-iRU"/>
                         <outlet property="convertedValue" destination="fTD-7f-Pep" id="r5H-0J-YVS"/>
