--- a/ExchangeRates/Base.lproj/Main.storyboard
+++ b/ExchangeRates/Base.lproj/Main.storyboard
@@ -67,30 +67,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="sRG-MU-D6x">
-                                <rect key="frame" x="10" y="382" width="394" height="30"/>
-                                <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YBG-Ge-Df2">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="30"/>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JhM-3l-aiS">
-                                        <rect key="frame" x="133" y="0.0" width="128" height="30"/>
-                                        <state key="normal" title="Convert"/>
-                                        <connections>
-                                            <action selector="convertValue:" destination="BYZ-38-t0r" eventType="touchUpInside" id="al0-4U-2bx"/>
-                                        </connections>
-                                    </button>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fTD-7f-Pep">
-                                        <rect key="frame" x="266" y="0.0" width="128" height="30"/>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                </subviews>
-                            </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DIa-NQ-0zG">
                                 <rect key="frame" x="20" y="64" width="58" height="42"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
@@ -108,20 +84,45 @@
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VUb-Gc-RqZ">
                                 <rect key="frame" x="10" y="156" width="394" height="216"/>
                             </pickerView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fTD-7f-Pep">
+                                <rect key="frame" x="10" y="462" width="394" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YBG-Ge-Df2">
+                                <rect key="frame" x="10" y="382" width="394" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JhM-3l-aiS">
+                                <rect key="frame" x="10" y="422" width="394" height="30"/>
+                                <state key="normal" title="Convert"/>
+                                <connections>
+                                    <action selector="convertValue:" destination="BYZ-38-t0r" eventType="touchUpInside" id="al0-4U-2bx"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sRG-MU-D6x" secondAttribute="trailing" constant="10" id="4jh-Ph-qee"/>
+                            <constraint firstItem="YBG-Ge-Df2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="1Kd-0c-Bcf"/>
+                            <constraint firstItem="fTD-7f-Pep" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="1sH-jV-fxP"/>
                             <constraint firstItem="VUb-Gc-RqZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="6KP-6I-WrJ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="MPT-1f-nQy" secondAttribute="trailing" constant="10" id="6r2-lf-XFI"/>
+                            <constraint firstItem="YBG-Ge-Df2" firstAttribute="top" secondItem="VUb-Gc-RqZ" secondAttribute="bottom" constant="10" id="6uF-HE-6HO"/>
                             <constraint firstItem="MPT-1f-nQy" firstAttribute="top" secondItem="DIa-NQ-0zG" secondAttribute="bottom" constant="10" id="7NS-99-zvB"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YBG-Ge-Df2" secondAttribute="trailing" constant="10" id="8CT-Zw-tr7"/>
                             <constraint firstItem="VUb-Gc-RqZ" firstAttribute="top" secondItem="MPT-1f-nQy" secondAttribute="bottom" constant="10" id="EA9-Bc-5ea"/>
-                            <constraint firstItem="sRG-MU-D6x" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="J0j-tp-5Lt"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JhM-3l-aiS" secondAttribute="trailing" constant="10" id="KMP-3C-H5Q"/>
                             <constraint firstItem="DIa-NQ-0zG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Mp5-gC-8ET"/>
                             <constraint firstItem="DIa-NQ-0zG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="P1q-dO-B1T"/>
-                            <constraint firstItem="sRG-MU-D6x" firstAttribute="top" secondItem="VUb-Gc-RqZ" secondAttribute="bottom" constant="10" id="PgR-hl-Jhq"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VUb-Gc-RqZ" secondAttribute="trailing" constant="10" id="T68-fX-kni"/>
+                            <constraint firstItem="JhM-3l-aiS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="aen-en-dYT"/>
                             <constraint firstItem="MPT-1f-nQy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="dMa-xu-nVZ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fTD-7f-Pep" secondAttribute="trailing" constant="10" id="eay-Js-l8F"/>
+                            <constraint firstItem="fTD-7f-Pep" firstAttribute="top" secondItem="JhM-3l-aiS" secondAttribute="bottom" constant="10" id="nl3-VJ-9xf"/>
+                            <constraint firstItem="JhM-3l-aiS" firstAttribute="top" secondItem="YBG-Ge-Df2" secondAttribute="bottom" constant="10" id="sdO-jt-5Fl"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
